[gd_scene load_steps=4 format=3 uid="uid://djfe7f6k2xek8"]

[ext_resource type="Script" path="res://Beacon/Beacon.gd" id="1_a3isp"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rr644"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.529412, 0.596078, 0.12549, 0.392157)
disable_receive_shadows = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_te62e"]
height = 5.0
radius = 2.5

[node name="Beacon" type="Area3D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_a3isp")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 25, 0)
radius = 2.5
height = 60.0
sides = 64
material = SubResource("StandardMaterial3D_rr644")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0)
shape = SubResource("CylinderShape3D_te62e")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
